# MillenniumEncryption

./: .gitignore  CMakeLists.txt  README.md  build_and_copy.cmake  build_log.txt  resources.qrc
doc/: millennium.tex
src/app/: CMakeLists.txt  README.md  clientsocket.cpp  clientsocket.h  codebookwindow.cpp  codebookwindow.h  codebox.cpp  codebox.h  database.cpp  database.h  friendsbox.cpp  friendsbox.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  messagesbox.cpp  messagesbox.h  requestsbox.cpp  requestsbox.h
src/crypt/: CMakeLists.txt  codebook.c  codebook.cpp  codebook.h  encrypt.c  encrypt.cpp  encrypt.h
src/loc/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  database.cpp  database.h  main.cpp  packet.cpp  packet.h  server.cpp  server.h
test/: CMakeLists.txt  codebook_test.cpp  encryption_test.cpp  packet_test.cpp  plaintext.txt
